test/asm/nested-brackets.err
error: Unterminated interpolation
    at nested-brackets.asm(5)
Assembly aborted with 1 error
